Added Remove From MeritList